--- a/app/templates/todos.hbs
+++ b/app/templates/todos.hbs
@@ -2,21 +2,13 @@
  
 <section id="main">
     <ul id="todo-list">
-        <li class="completed">
-            <input type="checkbox" class="toggle">
-            <label>Learn Ember</label><button class="destroy"></button>
-        </li>
+    {{#each}}
         <li>
             <input type="checkbox" class="toggle">
-            <label>...</label><button class="destroy"></button>
+            <label>{{title}}</label><button class="destroy"></button>
         </li>
-        <li>
-            <input type="checkbox" class="toggle">
-            <label>Profit!</label><button class="destroy"></button>
-        </li>
-    </ul>
- 
-    <input type="checkbox" id="toggle-all">
+    {{/each}}
+</ul>
 </section>
  
 <footer id="footer">
