--- a/app/templates/todos.hbs
+++ b/app/templates/todos.hbs
@@ -1,4 +1,5 @@
-<input type="text" id="new-todo" placeholder="What needs to be done?" />
+{{input type="text" id="new-todo" placeholder="What needs to be done?" 
+    value=newTitle action="createTodo"}}
  
 <section id="main">
     <ul id="todo-list">
