--- a/app/templates/todos.hbs
+++ b/app/templates/todos.hbs
@@ -2,13 +2,13 @@
     value=newTitle action="createTodo"}}
  
 <section id="main">
-    <ul id="todo-list">
-    {{#each}}
-        <li>
-            <input type="checkbox" class="toggle">
-            <label>{{title}}</label><button class="destroy"></button>
-        </li>
-    {{/each}}
+<ul id="todo-list">
+{{#each}}
+    <li {{bind-attr class="isCompleted:completed"}}>
+        {{input type="checkbox" checked=isCompleted class="toggle"}}
+        <label>{{title}}</label><button class="destroy"></button>
+    </li>
+{{/each}}
 </ul>
 </section>
  
