--- a/app/templates/todos.hbs
+++ b/app/templates/todos.hbs
@@ -4,9 +4,13 @@
 <section id="main">
 <ul id="todo-list">
 {{#each}}
-    <li {{bind-attr class="isCompleted:completed"}}>
-        {{input type="checkbox" checked=isCompleted class="toggle"}}
-        <label>{{title}}</label><button class="destroy"></button>
+    <li {{bind-attr class="isCompleted:completed isEditing:editing"}}>
+        {{#if isEditing}}
+            <input class="edit">
+        {{else}}
+            {{input type="checkbox" checked=isCompleted class="toggle"}}
+            <label {{action "editTodo" on="doubleClick"}}>{{title}}</label><button class="destroy"></button>
+        {{/if}}
     </li>
 {{/each}}
 </ul>
