Permitted edits -- lazy fix for error

--- a/app/templates/todos.hbs
+++ b/app/templates/todos.hbs
@@ -3,13 +3,15 @@
  
 <section id="main">
 <ul id="todo-list">
-{{#each}}
+{{#each itemController="todo"}}
     <li {{bind-attr class="isCompleted:completed isEditing:editing"}}>
         {{#if isEditing}}
-            <input class="edit">
+            {{input type="text" class="edit" value=title focus-out="acceptChanges"
+                insert-newline="acceptChanges"}}
         {{else}}
             {{input type="checkbox" checked=isCompleted class="toggle"}}
-            <label {{action "editTodo" on="doubleClick"}}>{{title}}</label><button class="destroy"></button>
+            <label {{action "editTodo" on="doubleClick"}}>{{title}}</label>
+            <button class="destroy"></button>
         {{/if}}
     </li>
 {{/each}}
