--- a/app/templates/todos.hbs
+++ b/app/templates/todos.hbs
@@ -2,35 +2,23 @@
     value=newTitle action="createTodo"}}
  
 <section id="main">
-<ul id="todo-list">
-{{#each itemController="todo"}}
-    <li {{bind-attr class="isCompleted:completed isEditing:editing"}}>
-        {{#if isEditing}}
-            {{input type="text" class="edit" value=title focus-out="acceptChanges"
-                insert-newline="acceptChanges"}}
-        {{else}}
-            {{input type="checkbox" checked=isCompleted class="toggle"}}
-            <label {{action "editTodo" on="doubleClick"}}>{{title}}</label>
-            <button {{action "removeTodo"}} class="destroy"></button>
-        {{/if}}
-    </li>
-{{/each}}
-</ul>
+    {{outlet}}
+    <input type="checkbox" id="toggle-all">
 </section>
- 
+
 <footer id="footer">
-    <span id="todo-count">
-        <strong>2</strong> todos left
-    </span>
+<span id="todo-count">
+    <strong>{{remaining}}</strong> {{inflection}} left
+</span>
     <ul id="filters">
         <li>
-            <a href="all" class="selected">All</a>
+            {{#link-to "todos.index" activeClass="selected"}}All{{/link-to}}
         </li>
         <li>
-            <a href="active">Active</a>
+            {{#link-to "todos.active" activeClass="selected"}}Active{{/link-to}}
         </li>
         <li>
-            <a href="completed">Completed</a>
+            {{#link-to "todos.complete" activeClass="selected"}}Complete{{/link-to}}
         </li>
     </ul>
  
