Added a mark all as complete, and a delete all on complete

--- a/app/templates/todos.hbs
+++ b/app/templates/todos.hbs
@@ -3,7 +3,7 @@
  
 <section id="main">
     {{outlet}}
-    <input type="checkbox" id="toggle-all">
+    {{input type="checkbox" id="toggle-all" checked=allAreDone}}
 </section>
 
 <footer id="footer">
@@ -22,7 +22,9 @@
         </li>
     </ul>
  
-    <button id="clear-completed">
-        Clear completed (1)
+{{#if hasCompleted}}
+    <button id="clear-completed" {{action "clearCompleted"}}>
+        Clear completed ({{completed}})
     </button>
+{{/if}}
 </footer>
