--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,13 @@
-<h2 id='title'>Welcome to Ember-CLI tutorial :)</h2>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Ember.js • TodoMVC</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <section id="todoapp">
+      <header id="header">
+        <h1>todos</h1>
 
 {{outlet}}
