--- a/app/templates/todos.hbs
+++ b/app/templates/todos.hbs
@@ -1,5 +1,6 @@
 {{input type="text" id="new-todo" placeholder="What needs to be done?" 
     value=newTitle action="createTodo"}}
+    </header>
  
 <section id="main">
     {{outlet}}
